--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "crypto-browserify": "^3.12.0",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
+    "https-browserify": "^1.0.0",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -17,14 +25,17 @@
     "react-spinners": "^0.13.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +54,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "browser-resolve": "^2.0.0",
+    "buffer": "^6.0.3",
+    "detective": "^5.2.1",
+    "process": "^0.11.10"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false,
+    "fs":false
   }
 }
