--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "assert": "^2.0.0",
     "axios": "^0.27.2",
     "crypto-browserify": "^3.12.0",
+    "emoji-picker-react": "^3.5.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
@@ -64,6 +65,6 @@
   "browser": {
     "crypto": false,
     "stream": false,
-    "fs":false
+    "fs": false
   }
 }
