--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "crypto-browserify": "^3.12.0",
     "emoji-picker-react": "^3.5.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
