--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "crypto-browserify": "^3.12.0",
     "emoji-picker-react": "^3.5.1",
     "file-saver": "^2.0.5",
@@ -20,6 +21,7 @@
     "os-browserify": "^0.3.0",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
